--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;500;700;900&family=Roboto:wght@300;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
     <title>CourseAI</title>
 </head>
 <body>
+    <nav>   </nav>
+<!-- <div class="lds-ellipsis"><div></div><div></div><div></div><div></div></div> -->
    
     <div class="assesment">
-        <h1>What is your Job title ?</h1>
+        <h1>Select your Speciality </h1>
         <input id="jobtitle-input" type="text">
         <button id="Send-jobtitle-btn" type="button">Start</button>
     </div>
