--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;500;700;900&family=Roboto:wght@300;500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="/style.css">
     <title>CourseAI</title>
 </head>
 <body>
@@ -21,5 +21,5 @@
     </div>
 
 </body>
-<script src="./main.js"></script>
+<script src="/main.js"></script>
 </html>
