adding logo  and blureffect

--- a/public/index.html
+++ b/public/index.html
@@ -5,21 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="icon" type="image/png"  href="https://chat.openai.com/favicon-32x32.png">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;500;700;900&family=Roboto:wght@300;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/style.css">
-    <title>CourseAI</title>
+    <title>AVANA</title>
+    
 </head>
 <body>
-    <nav>   </nav>
+<div class="blur--screen">
+    <nav> 
+        <img id="logo" src="/images/Logo.jpg" alt="">
+          </nav>
 <!-- <div class="lds-ellipsis"><div></div><div></div><div></div><div></div></div> -->
-   
+<img id="logo" src="/images/Logo.jpg" alt="Logo">
     <div class="assesment">
         <h1>Select your Speciality </h1>
         <input id="jobtitle-input" type="text">
         <button id="Send-jobtitle-btn" type="button">Start</button>
     </div>
 
+</div>
 </body>
 <script src="/main.js"></script>
 </html>
