adding couple of features

--- a/public/error404.html
+++ b/public/error404.html
@@ -20,12 +20,9 @@
         <img id="logo" src="/images/Logo.jpg" alt="">
           </nav>
 <img id="logo" src="/images/Logo.jpg" alt="Logo">
-    <div class="assesment">
-        <h1>Select your Speciality </h1>
-        <input id="jobtitle-input" type="text">
-        <button id="Send-jobtitle-btn" type="button">Start</button>
-    </div>
+   
 
+<h1 id="Heading--404">404</h1>
 </div>
 </body>
 <script src="/main.js"></script>
